fix broken styles for module css

--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -12,7 +12,7 @@
     color: #6B7280;
 }
 .input .inputWrapper {
-    margin-top: 25px;
+    margin-top: 16px;
     position: relative;
 }
 .input .inputWrapper input {
