--- a/components/nft/card.module.css
+++ b/components/nft/card.module.css
@@ -11,15 +11,15 @@
     border-radius: 10px;
     padding: 4px 8px;
 }
-.card .cardTop .emotionText.uptrend {
+.card .cardTop .emotionText.upTrend {
     color: #10B981;
     background: #ECFDF5;
 }
-.card .cardTop .emotionText.downtrend {
+.card .cardTop .emotionText.downTrend {
     color: #b94010;
     background: #ffb39a;
 }
-.card .cardTop .emotionText.normaltrend {
+.card .cardTop .emotionText.normalTrend {
     color: #000000;
     background: #eeeeee;
 }
